# SimpleSolutionsTest

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml
SimpleSolutionsTestTask/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
SimpleSolutionsTestTask/management/commands/: create_items.py
SimpleSolutionsTestTask/migrations/: 0001_initial.py  0002_discount_tax_item_currency_order.py
nginx/: default.conf
nginx/dev/: default.conf
nginx/prod/: default.conf
templates/: cancel.html  item.html  success.html
