[tool.poetry]
name = "simplesolutionstesttask"
version = "0.1.0"
description = ""
authors = ["JMUR <architect.lock@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
stripe = "^7.6.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
